Authentification warehouse user

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Warehouse Management Microservices</description>
 	<properties>
 		<java.version>11</java.version>
+		<jsonwebtoken.version>0.9.1</jsonwebtoken.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -28,6 +29,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${jsonwebtoken.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
