--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,10 +15,10 @@ spring:
           starttls:
             enable: true
   profiles:
-    active:
+    active: prod
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/warehouse_management
+    url: jdbc:mysql://localhost:3306/warehouse_management?useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
     password: France84.
   jpa:
