--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,16 @@
             <artifactId>swagger-annotations</artifactId>
             <version>2.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>4.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
